--- a/_misc.scss
+++ b/_misc.scss
@@ -9,12 +9,15 @@ a.postlink-local:hover {
     text-decoration:    none                        !important;
 }
 
-// Headers
-div.container hr:not(.divider) {
+// Horizontal rulers should have borders but Firefox is stupid, so we get this
+div.container div.row + hr,
+div.postbody div.content hr {
     border-top:         1px solid                   !important;
 }
 
-hr.dashed {
+// Except dashed ones which are used stupidly and dividers which are clutter
+hr.dashed,
+hr.divider {
     border-top:         0px                         !important;
 }
 
